fixed the title spacing

--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ main {
     height: 50%;
     box-shadow: 10px 10px 0px hsl(0, 0%, 7%);
     transition: box-shadow 0.3s ease;
+    overflow: hidden;
 }
 
 .blog-card:hover {
@@ -126,10 +127,10 @@ main {
 .blog-title {
     display: flex;
     align-items: center;
-    height: min-content;
+    height: 25px;
     margin-left: 25px;
-    margin-top: 0;
-    margin-bottom: 0;
+    margin-top: 8px;
+    margin-bottom: 8px;
     transition: color 0.3s ease;
 }
 
